deploy/manifests/rijksoverheid/base/mijnoverheid/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
