deploy/manifests/rijksoverheid/base/mijnoverheid/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: placeholder
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc
                port:
                  name: http
  tls:
    - secretName: rijksoverheid-mijnoverheid-frontend-tls
      hosts: []
